hide all sub questions

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@ print total</pre>
                 $('#prog_cont').attr('checked', false);
             });
             $('#prog_n').click(function(event) {
-                $('#know_prog .sub_q.q1').hide();
+                $('#know_prog .sub_q').hide();
                 $('#know_prog .sub_q.no').show();
             });
             $('#prog_cont').change(function() {
@@ -411,7 +411,7 @@ print total</pre>
                 $('#html_cont').attr('checked', false);
             });
             $('#html_n').click(function(event) {
-                $('#know_html .sub_q.q1').hide();
+                $('#know_html .sub_q').hide();
                 $('#know_html .sub_q.no').show();
             });
             $('#html_cont').change(function() {
@@ -454,7 +454,7 @@ print total</pre>
                 $('#linux_cont').attr('checked', false);
             });
             $('#linux_n').click(function(event) {
-                $('#know_linux .sub_q.q1').hide();
+                $('#know_linux .sub_q').hide();
                 $('#know_linux .sub_q.no').show();
             });
             $('#linux_cont').change(function() {
