--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                                     <pre>
 total = 2
 for x from 5 to 15
-  if x is even than
+  if x is even then
       add x to total
 loop
 print total</pre>
