text and style fixes

--- a/index.html
+++ b/index.html
@@ -87,11 +87,24 @@
         <div class="container">
             <section class="box">
                 <p>
-                    Sprawdź czy posiadasz odpowiednie kompetencje aby uczestniczyć w studiach podyplomowych
-                    <a href="http://wsnhid.pl/programowanie-aplikacji-internetowych-1.html">Programowanie aplikacji internetowych</a>
-                    prowadzonych przez pracowników <a href="http://stxnext.pl">STX Next</a> w
-                    <a href="http://wsnhid.pl">Wyższej Szkole Nauk Humanistycznych i Dziennikarstwa</a>
+                    Witaj,<br/>
+                    Jeśli jesteś na tej stronie, to oznacza, że prawdopodobnie
+                    interesuje Cię nauka języka Python. Jest to dla nas świetna
+                    informacja, bo <a href="http://stxnext.pl">STX Next</a>
+                    jest ekspertem w tej dziedzinie! We współpracy z
+                    <a href="http://wsnhid.pl">Wyższą Szkołą Nauk Humanistycznych i Dziennikarstwa</a>
+                    postanowiliśmy szerzyć wiedzę na studiach podyplomowych
+                    <a href="http://wsnhid.pl/programowanie-aplikacji-internetowych-1.html">Programowanie aplikacji internetowych w Pythonie</a>.
                 </p>
+                <p>
+                    Poniżej zawarliśmy krótki test, sprawdź, czy posiadasz
+                    odpowiednie kompetencje, aby uczestniczyć w zajęciach.
+                    Oczywiście, masz jeszcze czas, żeby się podszkolić,
+                    chcielibyśmy jednak, żeby każdy z kandydatów był świadomy tego,
+                    jaką wiedzę musi posiadać, aby uczyć się z uśmiechem i za kilka
+                    miesięcy napisać własną aplikację w Pythonie!
+                </p>
+                <p>Powodzenia!</p>
 
                 <form class="form-horizontal prelim">
                     <fieldset id="know_prog">
@@ -113,7 +126,7 @@
                                     <p>
                                         Szkolenie skierowane jest do osób, które potrafią już programować
                                         (w dowolnym języku programowania) i chciałyby poznać lub poszerzyć
-                                        znajomość języka Python oraz frameworków pythonowych pozwalających
+                                        znajomość języka Python oraz frameworków pythonowych, pozwalających
                                         tworzyć aplikacje internetowe.
                                     </p>
                                     <div class="control">
@@ -173,7 +186,8 @@
                                     </div>
                                 </div>
                                 <div class="sub_q q2">
-                                    <label for="prog_algo">Jaki jest wynik tego pseudo kodu?</label>
+                                    <label for="prog_algo">Jaki jest wynik tego pseudokodu?</label>
+                                    <p class="hint">(angielskie <i>even</i> to po polsku <i>parzysty</i>)</p>
                                     <pre>
 total = 2
 for x from 5 to 15
@@ -216,7 +230,7 @@ print total</pre>
                                     </div>
                                 </div>
                                 <div class="sub_q q1">
-                                    <label for="html_ver">Jaką wersję HTML znasz?</label>
+                                    <label for="html_ver">Którą wersję HTML znasz?</label>
                                     <div class="control">
                                         <input type="checkbox" name="html_ver[]" value="html4" />
                                         <label for="html_ver">HTML4</label>
@@ -235,8 +249,8 @@ print total</pre>
                                     </div>
                                 </div>
                                 <div class="sub_q q2">
-                                    <label for="html_algo">Napisz wycienek kodu HTML, który w przeglądarce będzie wyglądał jak na poniższym obrazku (wypunktowanie z dwoma elementami):</label>
-                                    <br />
+                                    <label for="html_algo">Napisz wycinek kodu HTML, który w przeglądarce będzie wyglądał jak na poniższym obrazku:</label>
+                                    <p class="hint">(wypunktowanie z dwoma elementami - pierwszy pogrubiony, drugi kursywą)</p>
                                     <img src="./html_sample.png"/>
                                     <div class="control">
                                         <textarea name="html_algo" id="html_algo" rows="8" cols="50"></textarea>
@@ -331,15 +345,15 @@ print total</pre>
 
                 <div class="summary" id="summary-full">
                     <h2>Gratulacje!</h2>
-                    <h3>Posiadasz odpowiednie kompetencje aby rozpocząć studia podyplomowe "Programowanie aplikacji internetowych"!</h3>
+                    <h3>Posiadasz odpowiednie kompetencje, aby rozpocząć studia podyplomowe "Programowanie aplikacji internetowych"!</h3>
                 </div>
                 <div class="summary" id="summary-some">
                     <h2>Brawo!</h2>
-                    <h3>Posiadasz część kompetencji potrzebnych aby rozpocząć studia podyplomowe "Programowanie aplikacji internetowych".</h3>
+                    <h3>Posiadasz część kompetencji potrzebnych, aby rozpocząć studia podyplomowe "Programowanie aplikacji internetowych".</h3>
                     <h4>Pamiętaj, że jeżeli dostaniesz się na studia, to musisz poznać niektóre zagadnienia przed rozpoczęciem pierwszych zajęć!</h4>
                 </div>
                 <div class="summary" id="summary-none">
-                    <h3>Nie posiadasz odpowiednich kompetencji aby rozpocząć studia podyplomowe "Programowanie aplikacji internetowych"!</h3>
+                    <h3>Nie posiadasz odpowiednich kompetencji, aby rozpocząć studia podyplomowe "Programowanie aplikacji internetowych"!</h3>
                     <h4>Jeżeli mimo to weźmiesz udział w rekrutacji i dostaniesz się na studia, to musisz poznać wszystkie brakujące zagadnienia przed rozpoczęciem pierwszych zajęć!</h4>
                 </div>
 
